--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000" />    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <title>Joon Portfolio</title>
   </head>
   <body>    
