--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <title>Joon Portfolio</title>
   </head>
   <body>    
-    <div id="root"></div>    
+    <div id="root"></div>  
+    <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>  
   </body>
 </html>
